--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "calculator-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Calculator App",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js"
   },
-  "engines": {
-    "node": "7.5.0"
-  },
-  "author": "",
+  "author": "Varsha Ijeri",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
