--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node server/server.js"
   },
+  "engines": {
+    "node": "14.15.0"
+  },
   "author": "Varsha Ijeri",
   "license": "ISC",
   "dependencies": {
